# resonance_installation

./: .gitignore  README.md
emotion_recognition/: smooth_vad.py
emotion_recognition/eeg/: basic_eeg_VAD.py  eeg_monitor.py
emotion_recognition/face/: main.py  optimised.py
emotion_recognition/gsr/: gsr_monitor.py  main.py  wesad_gsr_stress_statistical_random_forest_20s_4hz_info.pkl  wesad_gsr_stress_statistical_random_forest_20s_4hz_preprocessing.pkl
emotion_recognition/monitor/: .gitignore  README.md  pyproject.toml
emotion_recognition/monitor/biometric_monitor/: __init__.py  config.py  main.py
emotion_recognition/monitor/biometric_monitor/models/: base.py  face.py  gsr.py
emotion_recognition/monitor/biometric_monitor/osc/: osc_client.py  smooth_vad.py
emotion_recognition/monitor/biometric_monitor/pipelines/: __init__.py  base.py  eeg.py  emotion.py  face.py  gsr.py
emotion_recognition/monitor/biometric_monitor/utils/: image_processing.py
emotion_recognition/monitor/biometric_monitor/web/: app.py
emotion_recognition/monitor/biometric_monitor/web/static/scripts/: dashboard.js
emotion_recognition/monitor/biometric_monitor/web/static/styles/: dashboard.css
emotion_recognition/monitor/biometric_monitor/web/templates/: dashboard.html
emotion_recognition/monitor/debug/: debug.py  safe_startup.py
emotion_recognition/monitor/models/: wesad_gsr_stress_cnn_random_forest_20s_4hz_info.pkl  wesad_gsr_stress_cnn_random_forest_20s_4hz_preprocessing.pkl
emotion_recognition/monitor/tests/: test_smooth_vad_integration.py
max/Resonance/: Resonance.maxproj
notebooks/: EmotionPrediction.ipynb  deap-dataset.ipynb  dreamer-dataset.ipynb  ecg-emotion-recognition-kapita-selekta.ipynb  galva-sensing-study-of-gsr-signals.ipynb  generate-csv.py  muse-dataset.ipynb  muse_data.ipynb  neurosense_ml.py  neurosense_preprocessor.py  neurosense_quickrun.py  output.csv  plotting-galvanic-skin-response-signals.ipynb
resonance/: package-lock.json  package.json  resonance.maxproj
resonance/code/: chord_engine.js  main.js  mode_chords.js  vad_to_key.js
resonance/data/: Bass[1].maxsnap  ChowMultiTool.maxsnap  ValhallaDelay.maxsnap  Vital.maxsnap  Vital[1].maxsnap  emotions.txt  harmony1.txt  haunted[1].maxsnap  modes.json  (+5 more)
td/: background.tox  glitch.tox  liquidcolors.tox  mpegglitch.toe  pixelsorting.tox  project.13.toe  project.16.toe  project.20.toe  project.21.toe  project.22.toe  project.toe  voronoi.tox
timeflux/: infra.yaml
(+28 files in other folders)
