[project]
name = "biometric-monitor"
version = "0.1.0"
description = "Real-time biometric monitoring with emotion recognition and EEG analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pylsl>=1.16.0",
    "python-osc>=1.8.0",
    "pydantic>=2.0.0",
    "python-socketio>=5.8.0",
    "eventlet>=0.33.0",
    "joblib>=1.5.1",
    "scikit-learn>=1.6.1",
    "keras>=3.10.0",
    "tensorflow==2.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
biometric-monitor = "biometric_monitor.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.workspace]
members = [
    "example",
]
